tests/testcases/errors/BCE0022-12.boo
"""
BCE0022-12.boo(5,6): BCE0022: Cannot convert 'string' to 'int'.
"""
class Foo:
	[getter(Bar as int)]
	_bar as string
